# ocafitsfiles

./: .gitignore  README.md  pyproject.toml
ocafitsfiles/: __init__.py  _download.py  _filesystem.py  download_script.py
ocafitsfiles/_templates/: download.sh
tests/: test_download.py  test_iter_calib.py  test_night_set.py  test_parsing.py
